# UT-TDD_AGENT-HARNESS

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  hooks.json  package.json  pyproject.toml  tsconfig.json
.claude/: CLAUDE.md  settings.json
.codex/: hooks.json
docs/: feedback-log.md  improvement-backlog.md
helix-process/: HELIX-process-L0-L14.md  L0-concept.md  L1-requirements.md  L10-ux-refinement.md  L11-final-review.md  L12-deployment.md  L13-post-deployment-verification.md  L14-operation-verification.md  L2-ui-design.md  L3-requirements-definition.md  L4-basic-design.md  L5-detailed-design.md  L6-functional-design.md  L7-implementation.md  L8-integration-test.md  L9-system-test.md  README.md  add-feature-workflow.md  asset-mapping.md  automation-gate-map.md  ci-pr-workflow.md  continuous-run-context-management.md  cross-cutting-mechanisms.md  cross-detection.md  db-auto-registration.md  db-integration.md  detection-routing.md  deviation-plan-map.md  discovery-workflow.md  fe-detector-spec.md  folder-structure-review.md  frontend-design-workflow.md  incident-workflow.md  infra-readiness.md  integration-map.md  layer-context-injection.md  learning-engine.md  observability-metrics.md  recovery-workflow.md  refactor-workflow.md  (+7 more)
scripts/: ut-tdd  ut-tdd.ps1
src/: cli.ts
tests/: agent-guard.test.ts  agent-slots.test.ts  asset-catalog.test.ts  asset-drift.test.ts  attempt-escalation.test.ts  backfill-pairing.test.ts  change-impact.test.ts  cli-surface.test.ts  codex-hook-adapter.test.ts  coding-rules.test.ts  cycle-p4-verification.test.ts  ddd-tdd-rules.test.ts  (+72 more)
(+797 files in other folders)
