[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ut-tdd-agent-harness"
version = "0.0.1"
description = "UT-TDD Agent Harness — internal validation/development harness for AI implementation agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "UT-TDD Agent Harness Team" }]
dependencies = [
  "PyYAML>=6.0",
  # Windows cross-platform lock は stdlib `msvcrt` 直接呼出で実装済 (plan_frontmatter.py)。
  # portalocker への将来 swap は PLAN-001-d で検討。
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-xdist>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ut_tdd*"]

[tool.pytest.ini_options]
testpaths = ["src/ut_tdd/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
  "windows_only: tests that run only on Windows",
  "posix_only: tests that run only on POSIX systems",
]
